@@ -16,7 +16,12 @@ URL:		http://qmidictl.sourceforge.net/
 
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-buildroot
 
-BuildRequires:	libqt4-devel >= 4.4
+#BuildRequires:	libqt4-devel >= 4.4
+%if %{defined fedora}
+BuildRequires:	qt5-qtbase-devel >= 5.1, qt5-linguist
+%else
+BuildRequires:	libqt5-qtbase-devel >= 5.1, libqt5-linguist
+%endif
 
 %description
 QmidiCtl is a MIDI remote controller application that sends MIDI data
